# metaschema-codegen

./: .gitignore  .gitmodules  .python-version  README.md
.devcontainer/: devcontainer.json
design-docs/: api-usage.md  (+4 more)
metaschema-python/: README.md  pyproject.toml
metaschema-python/metaschema_python/: __main__.py  shared_types.py
metaschema-python/metaschema_python/codegen/: __init__.py  base_classes.py  generate_classes.py
metaschema-python/metaschema_python/codegen/python/: __init__.py  codegen.py  generate_classes.py
metaschema-python/metaschema_python/codegen/python/pkg_resources/: __init__.py  pkg.base_classes.py  pkg.metapath.py
metaschema-python/metaschema_python/codegen/python/templates/: base_classes.py  class_assembly.py.jinja2  class_datatype_complex.py.jinja2  class_datatype_simple.py.jinja2  class_field.py.jinja2  class_flag.py.jinja2  constraints.py.jinja2  datatypes.py.jinja2  field_class.py.jinja2  flag_class.py.jinja2  module.py.jinja2  module_template.py.jinja2
metaschema-python/metaschema_python/codegen/templates/: assembly_dataclass.jinja2  base_classes.py  field_class.jinja2
metaschema-python/metaschema_python/core/: __init__.py  assembly.py  base_assembly.py  base_instance.py  metapath.py  metaschema_context.py  metaschema_parser.py  metaschema_schema.py  metaschema_schemaparse.py  schemaparse.py
metaschema-python/metaschema_python/databind/: __init__.py  json_dump.py  json_parser.py  scratch.py  test.py  xml_parser.py  yaml_parser.py
metaschema-python/tests/: conftest.py  test_codegen.py  test_datatypes.py  test_metaschema_parse.py  test_sample.py
(+28 files in other folders)
