[tool.poetry]
name = "metaschema-python"
version = "0.1.0"
description = "A Python Library for parsing metaschema definitions and creating corresponding python classes"
authors = ["Robert Sherwood <robert.sherwood@credentive.com>"]
license = "CCT-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^5.1.1"
xmlschema = "^3.3.1"
jinja2 = "^3.1.4"
regex = "^2024.5.15"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
flake8 = "^7.0.0"
pylint = "^3.0.3"
types-lxml = "^2024.3.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
