[tool.poetry]
name = "metaschema-python"
version = "0.1.0"
description = "A Python Library for parsing metaschema definitions and creating corresponding python classes"
authors = ["Robert Sherwood <robert.sherwood@credentive.com>"]
license = "CCT-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^5.1.1"
xmlschema = "^3.3.1"
jinja2 = "^3.1.4"
regex = "^2024.5.15"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
flake8 = "^7.0.0"
pylint = "^3.0.3"
types-lxml = "^2024.3.27"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"